source/sass/blocks/header.scss
$header__trans: 200ms;

.header {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;

  &::before {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 100vh;
    z-index: 2;

    display: none;

    cursor: pointer;
    background-color: rgba($color-black-pearl, 0.4);

    content: "";
  }

  &--has-overlay {
    &::before {
      display: block;
    }
  }
}

.header__container {
  position: relative;
}

.header__logo {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.header__button-container {
  position: absolute;
  right: 0;
  top: 0;
}

.header__button {
  position: relative;
  z-index: 3;

  transition: gap $header__trans, background-color $header__trans;

  .header__close-icon {
    display: none;
  }

  .header__button-text {
    font-size: 14px;
    font-weight: 500;
    line-height: 100%;
    letter-spacing: 0.28px;
    text-transform: uppercase;

    transition: color $header__trans;
  }

  .header__button-icon {
    transition: color $header__trans, background-color $header__trans;
  }

  &--active {
    gap: 171px;

    background-color: $color-cerulean-blue;

    .header__button-text {
      color: $color-white;
    }

    .header__button-icon {
      color: $color-cerulean-blue;

      background-color: $color-white;
    }

    .header__open-icon {
      display: none;
    }

    .header__close-icon {
      display: block;
    }
  }

  @include hover-focus {
    .header__button-icon {
      transform: none;
    }
  }

  @include mobile {
    .header__button-icon {
      width: 46px;
      height: 46px;
    }

    &--active {
      gap: 176px;
    }
  }
}

.header__navigation {
  position: absolute;
  right: 0;
  left: 0;
  top: calc(100% + 3px);
  z-index: -1;

  opacity: 0;
  border-radius: 16px;
  background-color: $color-cerulean-blue;
  transition: opacity $header__trans;

  padding: 35px 25px;

  &--active {
    opacity: 1;
    z-index: 3;
  }

  @include tablet {
    padding-top: 33px;
    padding-bottom: 33px;
  }
}

.header__links {
  display: flex;
  flex-direction: column;
  gap: 24px;

  list-style: none;
  overflow-x: auto;

  padding: 0;
  margin: 0;
}

.header__inner-link-item {
  display: flex;
  flex-direction: column;
  gap: 13px;
}

.header__link {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10px;

  color: rgba($color-white, 0.7);
  font-size: 16px;
  line-height: 100%;
  letter-spacing: 0.32px;
  text-transform: uppercase;

  transition: color $header__trans;
  background-color: inherit;

  border: none;
  padding: 0;
  margin: 0;

  svg {
    transition: transform $header__trans;
  }

  &--active {
    svg {
      transform: rotate(180deg);
    }
  }

  @include hover-focus {
    color: $color-white;
  }
}


.header__inner-links {
  display: flex;
  flex-direction: column;
  gap: 16px;

  overflow: hidden;
  list-style: none;

  height: 0;
  padding: 0;

  margin: 0;

  &--opened {
    gap: 13px;

    height: auto;
    padding-top: 13px;
    padding-left: 16px;
  }

  @include mobile {
    &--opened {
      padding-top: 15px;
    }
  }
}

.header__inner-link {
  font-weight: 400;
  text-transform: capitalize;
}

